# pyre

./: .gitignore  Dockerfile  README.md  pyproject.toml  sandbox.py
.github/workflows/: pr.yaml  reusable-docker.yaml  reusable-tests.yaml  tag.yaml
docker-compose/: docker-compose.yaml
docker-compose/config/: investments_sample.yaml  orders.yaml  orders.yaml.example
docker-compose/provisioning/grafana/dashboards/: pyre.json
docker-compose/provisioning/grafana/datasources/: postgre.yaml
src/pyre/: config.py  constants.py  exceptions.py  index.py  monte_carlo.py  strategy.py
src/pyre/api/: auth.py  main.py
src/pyre/api/v1/: models.py  router.py
src/pyre/api/v1/endpoints/: orders.py  worth.py
src/pyre/budget/: categories.py  labeler.py
src/pyre/budget/transaction_loader/: __init__.py  banque_populaire.py  base.py
src/pyre/cli/: client.py  db.py  helpers.py  main.py  market.py  order.py  portfolio.py  simulate.py
src/pyre/db/: analysis.py  crud.py  engine.py  schemas.py
src/pyre/simulation/: index.py  monte_carlo.py  strategy.py
src/pyre/tax_wrappers/: app.py  av.py  base.py  constants.py  cto.py  pea.py
src/pyre/web/: main.py
src/pyre/web/utils/: dates.py
tests/: conftest.py  test_api.py  test_index.py  test_strategy.py
tests/api/: test_api.py  test_auth.py
tests/budget/: test_transaction_loader.py
tests/budget/data/transactions/: banque_populaire.csv
tests/resources/: URTH.csv
tests/tax_wrappers/: test_av.py  test_base.py  test_cto.py  test_pea.py
tests/test_tax_wrappers/: test_av.py
