[tool.pdm.build]
includes = ["src/pyre"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pyre"
version = "0.1.0"
description = "FIRE with python"
readme = "README.md"
authors = [{ name = "dithyrambe", email = "dithyrambe@outlook.fr" }]
requires-python = "<4,>=3.11"
dependencies = [
  "httpx<0.28.0,>=0.27.0",
  "numpy<2.0.0,>=1.26.4",
  "pandas<3.0.0,>=2.2.2",
  "pendulum<4.0.0,>=3.0.0",
  "plotille<6.0.0,>=5.0.0",
  "psycopg2-binary<3.0.0,>=2.9.9",
  "pydantic-settings<3.0.0,>=2.3.1",
  "pydantic<3.0.0,>=2.7.3",
  "pyyaml<7.0.0,>=6.0.1",
  "sqlalchemy<3.0.0,>=2.0.30",
  "typer<1.0.0,>=0.12.3",
  "uvicorn<1.0.0,>=0.30.1",
  "yfinance<1.0.0,>=0.2.40",
  "fastapi>=0.115.6",
]

[project.scripts]
pyre = "pyre.cli.main:app"

[dependency-groups]
dev = [
  "ipython<9.0.0,>=8.22.1",
  "pytest<9.0.0,>=8.1.1",
  "ruff<1.0.0,>=0.8.1",
  "testcontainers<5.0.0,>=4.5.1",
]

[tool.ruff]
line-length = 100

[tool.pyright]
venvPath = "."
venv = ".venv"
